--- a/docs/locale/en/LC_MESSAGES/introduction/AI_Assistant.po
+++ b/docs/locale/en/LC_MESSAGES/introduction/AI_Assistant.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Citeck \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-22 01:00+0300\n"
+"POT-Creation-Date: 2025-08-22 02:31+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -35,7 +35,7 @@ msgid "Доступно только в Enterprise версии c флагом a
 msgstr ""
 
 #: ../../introduction/AI_Assistant.rst:13
-msgid "Содержание"
+msgid "Contents"
 msgstr ""
 
 #: ../../introduction/AI_Assistant.rst:16
