--- a/docs/locale/en/LC_MESSAGES/introduction/corp_portal.po
+++ b/docs/locale/en/LC_MESSAGES/introduction/corp_portal.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Citeck \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-22 01:00+0300\n"
+"POT-Creation-Date: 2025-08-22 02:31+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -24,7 +24,7 @@ msgid "Корпоративный портал"
 msgstr ""
 
 #: ../../introduction/corp_portal.rst:7
-msgid "Содержание"
+msgid "Contents"
 msgstr ""
 
 #: ../../introduction/corp_portal.rst:9
