--- a/docs/locale/en/LC_MESSAGES/introduction/ecos_modules/crm_new.po
+++ b/docs/locale/en/LC_MESSAGES/introduction/ecos_modules/crm_new.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Citeck \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-22 01:00+0300\n"
+"POT-Creation-Date: 2025-08-22 02:31+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -42,7 +42,7 @@ msgid "отслеживать клиентов на каждом этапе пр
 msgstr ""
 
 #: ../../introduction/ecos_modules/crm_new.rst:14
-msgid "Содержание"
+msgid "Contents"
 msgstr ""
 
 #: ../../introduction/ecos_modules/crm_new.rst:17
